--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -46,6 +46,11 @@ common test-defaults
 common warnings
   ghc-options: -Wall
                -Wredundant-constraints
+               -- Note [unused-packages] Some packages need CPP conditioned on MIN_VERSION_ghc(x,y,z).
+               -- MIN_VERSION_<pkg> is CPP macro that cabal defines only when <pkg> is declared as a dependency.
+               -- But -Wunused-packages still reports it as unused dependency if it's not imported.
+               -- For packages with such "unused" dependencies we demote -Wunused-packages error
+               -- (enabled by --flag=pedantic) to warning via -Wwarn=unused-packages.
                -Wunused-packages
                -Wno-name-shadowing
                -Wno-unticked-promoted-constructors
@@ -428,6 +433,9 @@ library hls-explicit-imports-plugin
   import:             defaults, pedantic, warnings
   exposed-modules:    Ide.Plugin.ExplicitImports
   hs-source-dirs:     plugins/hls-explicit-imports-plugin/src
+  ghc-options:
+                      --See Note [unused-packages]
+                      -Wwarn=unused-packages
   build-depends:
     , aeson
     , base                  >=4.12 && <5
@@ -808,6 +816,9 @@ library hls-splice-plugin
   exposed-modules:
     Ide.Plugin.Splice
     Ide.Plugin.Splice.Types
+  ghc-options:
+    --See Note [unused-packages]
+    -Wwarn=unused-packages
 
   hs-source-dirs:     plugins/hls-splice-plugin/src
   build-depends:
@@ -1364,10 +1375,13 @@ library hls-ormolu-plugin
 
 
 test-suite hls-ormolu-plugin-tests
-  import:           defaults, test-defaults, warnings
+  import:           defaults, pedantic, test-defaults, warnings
   type:             exitcode-stdio-1.0
   hs-source-dirs:   plugins/hls-ormolu-plugin/test
   main-is:          Main.hs
+  ghc-options:
+                    -- See Note [unused-packages]
+                    -Wwarn=unused-packages
   build-tool-depends:
     ormolu:ormolu
   build-depends:
@@ -1592,7 +1606,6 @@ test-suite hls-semantic-tokens-plugin-tests
     , hls-plugin-api
     , lens
     , lsp
-    , ghc
     , text-rope
     , lsp-test
     , text
