--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -60,7 +60,7 @@
     - Development.IDE.Graph.Internal.Database
     - Development.IDE.Graph.Internal.Paths
     - Development.IDE.Graph.Internal.Profile
-    - Development.IDE.Graph.Internal.Types
+    - Development.IDE.Graph.Internal.Key
     - Ide.Types
     - Test.Hls
     - Test.Hls.Command
