--- a/.github/workflows/flags.yml
+++ b/.github/workflows/flags.yml
@@ -69,14 +69,15 @@ jobs:
           ghc: ${{ matrix.ghc }}
           os:  ${{ runner.os }}
 
-      - name: Build `hls-graph` with flags
-        run: cabal v2-build hls-graph --flags="embed-files stm-stats pedantic"
-
-      - name: Build `ghcide` with flags
-        run: cabal v2-build ghcide --flags="ghc-patched-unboxed-bytecode test-exe executable bench-exe ekg"
+      - name: Configue extra flags for some components
+        run: |
+          cabal configure \
+               --constraint "hls-graph +embed-files +stm-stats +pedantic" \
+               --constraint "ghcide +ekg +executable +pedantic +test-exe"
+          cat cabal.project.local
 
       - name: Build with pedantic (-WError)
-        run: cabal v2-build --flags="pedantic"
+        run: cabal v2-build --flags=pedantic
 
   flags_post_job:
     if: always()
