--- a/hls-plugin-api/hls-plugin-api.cabal
+++ b/hls-plugin-api/hls-plugin-api.cabal
@@ -142,6 +142,6 @@ benchmark rangemap-benchmark
     , criterion
     , deepseq
     , hls-plugin-api
-    , lsp-test
+    , lsp-types
     , random
     , random-fu
